--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "ubibi.cn",
+  "name": "ubibi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"node ./server/instanza_website.js"
+    "server": "node ./server/ubibi_node_server.js",
+    "release_home": "sh ./build_js.sh p home && sh ./build_less.sh p home "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
     "express": "^4.15.2"
+  },
+  "devDependencies": {
+    "string-loader": "0.0.1"
   }
 }
