--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "string-loader": "0.0.1"
