--- a/client_spa/package.json
+++ b/client_spa/package.json
@@ -6,6 +6,9 @@
     "watch": "NODE_ENV=development  node node_modules/webpack-dev-server/bin/webpack-dev-server  --config ./webpack.config.js  --hot --inline --progress --colors"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.29.0",
