--- a/server/config/server_config_default.json
+++ b/server/config/server_config_default.json
@@ -2,6 +2,6 @@
   "mysql_host": "127.0.0.1",
   "mysql_user": "root",
   "mysql_password": "",
-  "mysql_database": "ubibi",
+  "mysql_database": "ubibi_001",
   "mysql_port": 3306
 }
