--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "mysql": "^2.13.0",
+    "rebix-utils": "0.0.8",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
