--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "adjust-html-url": "0.0.3",
+    "ali-oss": "^4.10.1",
     "body-parser": "^1.17.2",
+    "co": "^4.6.0",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "marked": "^0.3.6",
     "mysql": "^2.13.0",
     "rebix-utils": "0.0.8",
     "underscore": "^1.8.3",
