--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-kit": "^1.0.17",
     "marked": "^0.3.6",
     "mysql": "^2.13.0",
     "rebix-utils": "0.0.8",
