--- a/server/config/server_config_default.json
+++ b/server/config/server_config_default.json
@@ -1,7 +1,7 @@
 {
   "mysql_host": "127.0.0.1",
   "mysql_user": "root",
-  "mysql_password": "",
+  "mysql_password": "heihei123",
   "mysql_database": "ubibi_001",
-  "mysql_port": 3306
+  "mysql_port": 8889
 }
